--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ icon: ⚛️ #the emoji used as the favicon (alternatively, provide image name i
 
 url: https://vmedwards.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -56,7 +56,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # -----------------------------------------------------------------------------
 
 github_username: vmedwards # your GitHub user name
-linkedin_username: linkedin.com/in/vedwards1 # your LinkedIn user name
+linkedin_username: vedwards1 # your LinkedIn user name
 scholar_userid: m5rgBkUAAAAJ # your Google Scholar ID
 work_url: https://scalar.seas.upenn.edu/ # work page URL
 
